{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 13,
  "lineage": "33cceda6-26e1-6e9b-191f-829a8edc212f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c881994b5566f516",
            "owner_id": "296450366806",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rout_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01ce8911facb1dd72",
            "owner_id": "296450366806",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c881994b5566f516",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_Subnet"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rout_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09a239f03795fba66",
            "owner_id": "296450366806",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c881994b5566f516",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Subnet"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0829c7ed4610564c0",
            "route_table_id": "rtb-01ce8911facb1dd72",
            "subnet_id": "subnet-0fc4dfb1710949df8"
          },
          "depends_on": [
            "aws_route_table.rout_private",
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate-private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced3e5bfe29cc238",
            "route_table_id": "rtb-01ce8911facb1dd72",
            "subnet_id": "subnet-0c9847d44dffcd207"
          },
          "depends_on": [
            "aws_route_table.rout_private",
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b06443624dda8c11",
            "route_table_id": "rtb-09a239f03795fba66",
            "subnet_id": "subnet-09efa7c7cd33b90ab"
          },
          "depends_on": [
            "aws_route_table.rout_public",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf339a953395fcf",
            "route_table_id": "rtb-09a239f03795fba66",
            "subnet_id": "subnet-06163552af9cc964b"
          },
          "depends_on": [
            "aws_route_table.rout_public",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:296450366806:subnet/subnet-0fc4dfb1710949df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0fc4dfb1710949df8",
            "map_public_ip_on_launch": false,
            "owner_id": "296450366806",
            "tags": {
              "Name": "Private_Subnet1"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:296450366806:subnet/subnet-0c9847d44dffcd207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c9847d44dffcd207",
            "map_public_ip_on_launch": false,
            "owner_id": "296450366806",
            "tags": {
              "Name": "Private_Subnet2"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:296450366806:subnet/subnet-09efa7c7cd33b90ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-09efa7c7cd33b90ab",
            "map_public_ip_on_launch": true,
            "owner_id": "296450366806",
            "tags": {
              "Name": "Public_Subnet1"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:296450366806:subnet/subnet-06163552af9cc964b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-06163552af9cc964b",
            "map_public_ip_on_launch": true,
            "owner_id": "296450366806",
            "tags": {
              "Name": "Public_Subnet2"
            },
            "vpc_id": "vpc-065432624ee85d39b"
          },
          "depends_on": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:296450366806:vpc/vpc-065432624ee85d39b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02941b43bb6d0c560",
            "default_route_table_id": "rtb-069a1bcde95c527d8",
            "default_security_group_id": "sg-0c3fabba24d391de0",
            "dhcp_options_id": "dopt-43a0333b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-065432624ee85d39b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-069a1bcde95c527d8",
            "owner_id": "296450366806",
            "tags": {
              "Name": "ITI-VPC"
            }
          }
        }
      ]
    }
  ]
}